applying responsive on smaller screens

--- a/dating_registration_form/index.html
+++ b/dating_registration_form/index.html
@@ -20,27 +20,27 @@
         <p>dados pessoais</p>
         <p>contato</p>
         <p>selecione seu plano</p>
-        <img class="letter" src="images/carta_b_w.png" alt="letter with heart">
+        <!-- <img class="letter" src="images/carta_b_w.png" alt="letter with heart"> -->
       </section>
 
       <form action="#">
         <section data-action='section' class="section sectionVisible">
-          <label for="">Nome</label>
+          <label for="" class="name">Nome</label>
           <input type="text" placeholder="ex: Fulana da Silva">
-          <label for="">idade</label>
+          <label for="" class="age">idade</label>
           <input type="number" min="18" placeholder="ex: 20" id="">
-          <label for="" title="sexo ou genero">Eu sou</label>
+          <label for="" title="sexo ou genero" class="gender">Eu sou</label>
           <input type="text" placeholder="ex: mulher" id="">
-          <label for="" title="sexo ou genero">Tenho preferência por</label>
+          <label for="" title="sexo ou genero" class="pref">Tenho preferência por</label>
           <input type="text" placeholder="ex: sem preferência" id="">
         </section>
 
         <section data-action='section' class="section">
-          <label for="">E-mail</label>
+          <label for="" class="email">E-mail</label>
           <input type="email" placeholder="fulana_da_silva@gmail.com">
-          <label for="">Telefone</label>
+          <label for="" class="tel">Telefone</label>
           <input type="tel" placeholder="11999999999" id="">
-          <label for="">endereço</label>
+          <label for="" class="address">endereço</label>
           <input type="text" placeholder="rua um, numero 2, casa 3, São Paulo,Sp" id="">
         </section>
 
